--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -102,10 +102,8 @@ Su Linux: gnone-screenshot utility<br>
 <p><span id="Parameters"></span>
 </p>
 <h2><span class="mw-headline" id="Parametri">Parametri</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The Macro supports user parameters, which can be set using <b>Tools &rarr; Edit Parameters... &rarr; Plugins &rarr; Snip_Macro</b>
+<p>La macro supporta i parametri utente, che possono essere impostati tramite <b>Strumenti &rarr; Modifica parametri... &rarr; Plugin &rarr; Snip_Macro</b>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><code>LastX</code>, <code>LastY</code>, <code>LastWidth</code>, <code>LastHeight</code>: location and size of snip box last use</dd>
 <dd><code>WindowOpacity</code> (0.85): a value between 0.0 (less opaque) and 1.0 (more opaque)</dd>
@@ -545,15 +543,15 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122144911
+Cached time: 20260122151135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 288/1000000
-Post&#8208;expand include size: 8696/2097152 bytes
-Template argument size: 19098/2097152 bytes
+CPU time usage: 0.049 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 287/1000000
+Post&#8208;expand include size: 8702/2097152 bytes
+Template argument size: 19104/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -561,18 +559,18 @@ Unstrip post&#8208;expand size: 18825/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.820      1 -total
- 17.46%    4.507      7 Template:KEY
- 16.43%    4.243      1 Template:Macro/it
- 11.60%    2.996      1 Template:FileName
- 11.46%    2.959     13 Template:Incode
- 11.04%    2.851      1 Template:MenuCommand
-  8.97%    2.315      3 Template:Button
-  8.46%    2.184      1 Template:MacroCode
-  8.26%    2.133      2 Template:Caption
+100.00%   16.536      1 -total
+ 19.99%    3.305      1 Template:Macro/it
+ 14.85%    2.456     13 Template:Incode
+ 11.75%    1.943      2 Template:Caption
+ 10.97%    1.814      1 Template:MacroCode
+ 10.82%    1.789      1 Template:MenuCommand
+  8.12%    1.342      7 Template:KEY
+  7.21%    1.193      1 Template:FileName
+  7.00%    1.157      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144910 and revision id 1742420. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122151135 and revision id 1742438. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
