--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -116,12 +116,12 @@
 <li><b>Polom&#283;r</b>: V&#382;dy nejprve aplikujte rozm&#283;r polom&#283;ru. Idem.</li></ul>
 </td></tr>
 <tr>
-<td><b>Scale upon first constraint</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
+<td><b>M&#283;&#345;&iacute;tko p&#345;i prvn&iacute; vazb&#283;</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </td>
-<td>Specifies how automatic geometry scaling upon first dimension is performed:
-<ul><li><b>Always</b>: Automatic scaling upon first dimension is always performed.</li>
-<li><b>Never</b>: Automatic scaling upon first dimension is never performed.</li>
-<li><b>When no scale feature is visible</b>: Automatic scaling upon first dimension is only performed if there are no visible objects in the 3D View.</li></ul>
+<td>Ur&#269;uje, jak se prov&aacute;d&iacute; automatick&eacute; &scaron;k&aacute;lov&aacute;n&iacute; geometrie p&#345;i prvn&iacute;m rozm&#283;ru:
+<ul><li><b>V&#382;dy</b>: Automatick&eacute; &scaron;k&aacute;lov&aacute;n&iacute; podle prvn&iacute;ho rozm&#283;ru se prov&aacute;d&iacute; v&#382;dy.</li>
+<li><b>Nikdy</b>: Automatick&eacute; &scaron;k&aacute;lov&aacute;n&iacute; podle prvn&iacute;ho rozm&#283;ru se nikdy neprov&aacute;d&iacute;.</li>
+<li><b>Kdy&#382; nen&iacute; viditeln&eacute; &#382;&aacute;dn&eacute; m&#283;&#345;&iacute;tko</b>: Automatick&eacute; &scaron;k&aacute;lov&aacute;n&iacute; podle prvn&iacute; dimenze se prov&aacute;d&iacute; pouze v p&#345;&iacute;pad&#283;, &#382;e ve 3D pohledu nejsou &#382;&aacute;dn&eacute; viditeln&eacute; objekty.</li></ul>
 </td></tr>
 <tr>
 <td><b>On-view-parameters (OVP)</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122151437
+Cached time: 20260122151939
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.156 seconds
-Real time usage: 0.230 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.216 seconds
 Preprocessor visited node count: 1224/1000000
-Post&#8208;expand include size: 30055/2097152 bytes
-Template argument size: 11625/2097152 bytes
+Post&#8208;expand include size: 30066/2097152 bytes
+Template argument size: 11636/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.912      1 -total
- 19.99%   11.375      1 Template:Sketcher_Tools_navi/cs
- 10.58%    6.019      2 Template:Navigation_menu_2
- 10.25%    5.831      3 Template:PropertyView
-  9.08%    5.170     96 Template:MenuCommand
-  8.73%    4.966      1 Template:Value
-  8.58%    4.881      1 Template:Userdocnavi/cs
-  4.76%    2.708      2 Template:Caption
-  4.67%    2.659      3 Template:Variable
-  4.48%    2.548     19 Template:Version
+100.00%   62.565      1 -total
+ 14.28%    8.933      1 Template:Sketcher_Tools_navi/cs
+ 13.83%    8.650      3 Template:PropertyView
+ 11.51%    7.204      1 Template:Userdocnavi/cs
+ 10.53%    6.587      2 Template:Navigation_menu_2
+  7.58%    4.743     96 Template:MenuCommand
+  6.50%    4.067      3 Template:Variable
+  5.71%    3.575      2 Template:Docnav
+  5.61%    3.512      1 Template:Value
+  4.54%    2.839     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122151437 and revision id 1742440. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122151938 and revision id 1742442. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
