--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -124,12 +124,12 @@
 <li><b>Kdy&#382; nen&iacute; viditeln&eacute; &#382;&aacute;dn&eacute; m&#283;&#345;&iacute;tko</b>: Automatick&eacute; &scaron;k&aacute;lov&aacute;n&iacute; podle prvn&iacute; dimenze se prov&aacute;d&iacute; pouze v p&#345;&iacute;pad&#283;, &#382;e ve 3D pohledu nejsou &#382;&aacute;dn&eacute; viditeln&eacute; objekty.</li></ul>
 </td></tr>
 <tr>
-<td><b>On-view-parameters (OVP)</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Parametry v pohledu</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>Specifies the visibility mode for the On-view-parameters. The options are:
-<ul><li><b>None</b>: On-view-Parameters are completely disabled.</li>
-<li><b>Dimensions only</b>: Only dimensional On-view-parameters are enabled. They are the most useful. For example the radius of a circle.</li>
-<li><b>Position and dimensions</b>: Both positional and dimensional On-view-parameters are enabled. Positional parameters are the position of the cursor. For example for the center of a circle.</li></ul>
+<td>Specifikuje re&#382;im viditelnosti pro parametry zobrazen&iacute;. Mo&#382;nosti jsou:
+<ul><li><b>&#381;&aacute;dn&yacute;</b>: Parametry zobrazen&iacute; jsou zcela deaktivov&aacute;ny.</li>
+<li><b>Pouze rozm&#283;ry</b>: Povoleny jsou pouze rozm&#283;rov&eacute; parametry zobrazen&iacute;. Ty jsou neju&#382;ite&#269;n&#283;j&scaron;&iacute;. Nap&#345;&iacute;klad polom&#283;r kruhu.</li>
+<li><b>Poloha a rozm&#283;ry</b>: Jsou povoleny jak pozi&#269;n&iacute;, tak rozm&#283;rov&eacute; parametry zobrazen&iacute;. Pozi&#269;n&iacute; parametry p&#345;edstavuj&iacute; polohu kurzoru. Nap&#345;&iacute;klad pro st&#345;ed kruhu.</li></ul>
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Grid">Grid</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Grid.png&amp;filetimestamp=20240513144053&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Grid.png" decoding="async" width="400" height="325" class="mw-file-element" data-file-width="600" data-file-height="487"></a></span>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122151939
+Cached time: 20260122152254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.216 seconds
+CPU time usage: 0.171 seconds
+Real time usage: 0.647 seconds
 Preprocessor visited node count: 1224/1000000
-Post&#8208;expand include size: 30066/2097152 bytes
-Template argument size: 11636/2097152 bytes
+Post&#8208;expand include size: 30058/2097152 bytes
+Template argument size: 11628/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.565      1 -total
- 14.28%    8.933      1 Template:Sketcher_Tools_navi/cs
- 13.83%    8.650      3 Template:PropertyView
- 11.51%    7.204      1 Template:Userdocnavi/cs
- 10.53%    6.587      2 Template:Navigation_menu_2
-  7.58%    4.743     96 Template:MenuCommand
-  6.50%    4.067      3 Template:Variable
-  5.71%    3.575      2 Template:Docnav
-  5.61%    3.512      1 Template:Value
-  4.54%    2.839     19 Template:Version
+100.00%  125.860      1 -total
+ 16.51%   20.774      3 Template:PropertyView
+ 14.76%   18.579      1 Template:Userdocnavi/cs
+  9.83%   12.369      1 Template:Sketcher_Tools_navi/cs
+  9.42%   11.850     96 Template:MenuCommand
+  8.53%   10.733      3 Template:KEY
+  8.36%   10.520      2 Template:Navigation_menu_2
+  6.94%    8.731      1 Template:Value
+  4.88%    6.145      3 Template:Variable
+  4.30%    5.411      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122151938 and revision id 1742442. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152253 and revision id 1742444. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
