--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -131,7 +131,9 @@
 <li><b>Pouze rozm&#283;ry</b>: Povoleny jsou pouze rozm&#283;rov&eacute; parametry zobrazen&iacute;. Ty jsou neju&#382;ite&#269;n&#283;j&scaron;&iacute;. Nap&#345;&iacute;klad polom&#283;r kruhu.</li>
 <li><b>Poloha a rozm&#283;ry</b>: Jsou povoleny jak pozi&#269;n&iacute;, tak rozm&#283;rov&eacute; parametry zobrazen&iacute;. Pozi&#269;n&iacute; parametry p&#345;edstavuj&iacute; polohu kurzoru. Nap&#345;&iacute;klad pro st&#345;ed kruhu.</li></ul>
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Grid">Grid</span></h2>
+<p><span id="Grid"></span>
+</p>
+<h2><span id="M.C5.99.C3.AD.C5.BEka"></span><span class="mw-headline" id="M&#345;&iacute;&#382;ka">M&#345;&iacute;&#382;ka</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Grid.png&amp;filetimestamp=20240513144053&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Grid.png" decoding="async" width="400" height="325" class="mw-file-element" data-file-width="600" data-file-height="487"></a></span>
 </p><p>On this page you can specify the following:
 </p>
@@ -437,13 +439,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122152254
+Cached time: 20260122152310
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.171 seconds
-Real time usage: 0.647 seconds
-Preprocessor visited node count: 1224/1000000
+CPU time usage: 0.161 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 1225/1000000
 Post&#8208;expand include size: 30058/2097152 bytes
 Template argument size: 11628/2097152 bytes
 Highest expansion depth: 7/100
@@ -453,19 +455,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.860      1 -total
- 16.51%   20.774      3 Template:PropertyView
- 14.76%   18.579      1 Template:Userdocnavi/cs
-  9.83%   12.369      1 Template:Sketcher_Tools_navi/cs
-  9.42%   11.850     96 Template:MenuCommand
-  8.53%   10.733      3 Template:KEY
-  8.36%   10.520      2 Template:Navigation_menu_2
-  6.94%    8.731      1 Template:Value
-  4.88%    6.145      3 Template:Variable
-  4.30%    5.411      1 Template:Button
+100.00%   48.500      1 -total
+ 17.34%    8.412      1 Template:Sketcher_Tools_navi/cs
+ 12.72%    6.171      2 Template:Navigation_menu_2
+ 12.24%    5.937      1 Template:Userdocnavi/cs
+  9.25%    4.488      3 Template:PropertyView
+  7.95%    3.857     96 Template:MenuCommand
+  6.72%    3.258      1 Template:Value
+  5.10%    2.476     19 Template:Version
+  5.01%    2.428      2 Template:Docnav
+  4.69%    2.277      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152253 and revision id 1742444. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152310 and revision id 1742446. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
