--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -439,12 +439,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122152310
+Cached time: 20260122152316
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.161 seconds
-Real time usage: 0.211 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 1225/1000000
 Post&#8208;expand include size: 30058/2097152 bytes
 Template argument size: 11628/2097152 bytes
@@ -455,19 +455,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.500      1 -total
- 17.34%    8.412      1 Template:Sketcher_Tools_navi/cs
- 12.72%    6.171      2 Template:Navigation_menu_2
- 12.24%    5.937      1 Template:Userdocnavi/cs
-  9.25%    4.488      3 Template:PropertyView
-  7.95%    3.857     96 Template:MenuCommand
-  6.72%    3.258      1 Template:Value
-  5.10%    2.476     19 Template:Version
-  5.01%    2.428      2 Template:Docnav
-  4.69%    2.277      3 Template:KEY
+100.00%   44.863      1 -total
+ 21.21%    9.514      1 Template:Sketcher_Tools_navi/cs
+ 12.71%    5.701      2 Template:Navigation_menu_2
+ 11.96%    5.365      1 Template:Userdocnavi/cs
+ 10.26%    4.602      3 Template:PropertyView
+  8.86%    3.973     96 Template:MenuCommand
+  5.74%    2.574      1 Template:Value
+  4.72%    2.118      3 Template:Variable
+  4.42%    1.981      2 Template:Docnav
+  4.19%    1.880     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152310 and revision id 1742446. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152316 and revision id 1742446. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
