--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -135,7 +135,7 @@
 </p>
 <h2><span id="M.C5.99.C3.AD.C5.BEka"></span><span class="mw-headline" id="M&#345;&iacute;&#382;ka">M&#345;&iacute;&#382;ka</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_Grid.png&amp;filetimestamp=20240513144053&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_Grid.png" decoding="async" width="400" height="325" class="mw-file-element" data-file-width="600" data-file-height="487"></a></span>
-</p><p>On this page you can specify the following:
+</p><p>Na t&eacute;to str&aacute;nce m&#367;&#382;ete zadat n&aacute;sleduj&iacute;c&iacute; hodnoty:
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
@@ -439,12 +439,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122152316
+Cached time: 20260122152349
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.136 seconds
-Real time usage: 0.174 seconds
+Real time usage: 0.227 seconds
 Preprocessor visited node count: 1225/1000000
 Post&#8208;expand include size: 30058/2097152 bytes
 Template argument size: 11628/2097152 bytes
@@ -455,19 +455,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.863      1 -total
- 21.21%    9.514      1 Template:Sketcher_Tools_navi/cs
- 12.71%    5.701      2 Template:Navigation_menu_2
- 11.96%    5.365      1 Template:Userdocnavi/cs
- 10.26%    4.602      3 Template:PropertyView
-  8.86%    3.973     96 Template:MenuCommand
-  5.74%    2.574      1 Template:Value
-  4.72%    2.118      3 Template:Variable
-  4.42%    1.981      2 Template:Docnav
-  4.19%    1.880     19 Template:Version
+100.00%   52.435      1 -total
+ 13.66%    7.162      1 Template:Sketcher_Tools_navi/cs
+ 10.31%    5.408      1 Template:Userdocnavi/cs
+  9.50%    4.983      2 Template:Navigation_menu_2
+  9.34%    4.899      1 Template:Value
+  8.27%    4.336      3 Template:PropertyView
+  7.91%    4.148     96 Template:MenuCommand
+  6.89%    3.611      2 Template:Docnav
+  5.52%    2.895      3 Template:KEY
+  5.11%    2.677      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152316 and revision id 1742446. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122152349 and revision id 1742449. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
