--- a/wiki/it/Macro_Code_Colors_Resistance.html
+++ b/wiki/it/Macro_Code_Colors_Resistance.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Code Farben Widerstand (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Code_Colors_Resistance.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -119,39 +119,37 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 <p><span id="Version"></span>
 </p>
 <h2><span class="mw-headline" id="Versione">Versione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ver: 0.1a&nbsp;: 12/12/2025&nbsp;: add link and change line 812:
+<p>ver: 0.1a&nbsp;: 12/12/2025&nbsp;: aggiunto collegamento e modifica alla riga 812:
 </p>
-</div>
 <pre>                    #obj_Obj[i].ViewObject.DiffuseColor = colors 
                     FreeCAD.ActiveDocument.getObject(obj_Obj[i].Name).ViewObject.DiffuseColor = colors 
                     FreeCAD.ActiveDocument.getObject(obj_Obj[i].Name).ViewObject.Transparency = 0
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122170123
+Cached time: 20260122170141
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 110/1000000
+CPU time usage: 0.024 seconds
+Real time usage: 0.036 seconds
+Preprocessor visited node count: 109/1000000
 Post&#8208;expand include size: 3469/2097152 bytes
 Template argument size: 1208/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2339/5000000 bytes
+Unstrip post&#8208;expand size: 2340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.020      1 -total
- 34.41%    3.104      1 Template:Caption
- 34.17%    3.082      1 Template:Codeextralink
- 29.64%    2.674      1 Template:Macro
+100.00%    5.964      1 -total
+ 43.28%    2.581      1 Template:Macro
+ 32.50%    1.938      1 Template:Codeextralink
+ 21.34%    1.273      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170123 and revision id 1742501. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170141 and revision id 1742503. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
