--- a/wiki/it/Macro_Code_Colors_Resistance.html
+++ b/wiki/it/Macro_Code_Colors_Resistance.html
@@ -2,8 +2,7 @@
 <li><a href="../de/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Code Farben Widerstand (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Code_Colors_Resistance.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Code_Colors_Resistance.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Code Colors Resistance (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -12,13 +11,13 @@ Macro Code Colors Resistance
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Create the resistance, give the value or the color code, you can also calculate the total value with a serial or parallel resistance<br><br>Macro version: 0.1<br>Last modified: 2025/12/12<br>FreeCAD version: 1.00 and above<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Toolbar Icon</a><br>Author: Mario52<br>
+<td class="ctEven left macro-description">Create the resistance, give the value or the color code, you can also calculate the total value with a serial or parallel resistance<br><br>Versione macro: 0.1<br>Ultima modifica: 2025/12/12<br>Versione FreeCAD: 1.00 and above<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Toolbar Icon</a><br>Autore: Mario52<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../User;Mario52.html" title="User:Mario52">Mario52</a>
@@ -30,40 +29,40 @@ Macro Code Colors Resistance
 <td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Toolbar Icon</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">0.1
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2025/12/12
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">1.00 and above
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -72,7 +71,6 @@ Macro Code Colors Resistance
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -127,29 +125,29 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122170221
+Cached time: 20260122170334
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.023 seconds
-Real time usage: 0.036 seconds
-Preprocessor visited node count: 110/1000000
-Post&#8208;expand include size: 3469/2097152 bytes
+CPU time usage: 0.028 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 107/1000000
+Post&#8208;expand include size: 3495/2097152 bytes
 Template argument size: 1208/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2340/5000000 bytes
+Unstrip post&#8208;expand size: 2344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.283      1 -total
- 42.07%    2.643      1 Template:Macro
- 41.43%    2.603      1 Template:Codeextralink
- 14.42%    0.906      1 Template:Caption
+100.00%    7.081      1 -total
+ 45.12%    3.195      1 Template:Macro/it
+ 27.58%    1.953      1 Template:Caption
+ 24.82%    1.758      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170221 and revision id 1742503. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170334 and revision id 1742506. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
