--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -393,7 +393,7 @@
 </p>
 <h2><span id="Pozn.C3.A1mka"></span><span class="mw-headline" id="Pozn&aacute;mka">Pozn&aacute;mka</span></h2>
 <p>Existuje je&scaron;t&#283; jedna preference, kter&aacute; m&aacute; vliv na n&aacute;&#269;rtky. Pokud je p&#345;edvolba <b>Pr&#367;hledn&eacute; objekty</b> na kart&#283; <a href="../Preferences_Editor.html#3D_View" title="Preferences Editor">Zobrazen&iacute; &rarr; 3D pohled</a> nastavena na <code>Pr&#367;chod zadn&iacute; stranou</code>, jsou &scaron;ipky na jednom konci rozm&#283;r&#367; n&aacute;&#269;rtu na n&#283;kter&yacute;ch syst&eacute;mech skryty. P&#345;i pohledu zezadu lze hodnotu rozm&#283;ru tak&eacute; skr&yacute;t. Ovlivn&#283;ny jsou verze 0.19 a&#382; 0.21 (krom&#283; v&#283;tve Link). Ve verz&iacute;ch 0.19 a 0.20 se tento efekt projev&iacute; pouze v p&#345;&iacute;pad&#283;, &#382;e je v sekci <a href="../Sketcher_Dialog.html#Edit_controls" title="Sketcher Dialog">&Uacute;pravy ovl&aacute;dac&iacute;ch prvk&#367;</a> na <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Panelu &uacute;kol&#367;</a> deaktivov&aacute;na volba <b>Zobrazit m&#345;&iacute;&#382;ku</b>, jak je zn&aacute;zorn&#283;no n&iacute;&#382;e.
-</p><p>Viz <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">forum topic</a>.
+</p><p>Viz <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=70975&amp;start=10">t&eacute;ma f&oacute;ra</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-01.png&amp;filetimestamp=20220814165731&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-01.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-02.png&amp;filetimestamp=20220814170147&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-02.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Pohled zep&#345;edu, m&#345;&iacute;&#382;ka zapnut&aacute; a m&#345;&iacute;&#382;ka vypnut&aacute;</p>
@@ -444,12 +444,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122170342
+Cached time: 20260122170401
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.222 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 1218/1000000
 Post&#8208;expand include size: 30351/2097152 bytes
 Template argument size: 12011/2097152 bytes
@@ -460,19 +460,19 @@ Unstrip post&#8208;expand size: 2250/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.572      1 -total
- 17.22%   11.464      1 Template:Sketcher_Tools_navi/cs
- 16.34%   10.876      3 Template:PropertyView
- 11.75%    7.822      1 Template:Userdocnavi/cs
- 11.43%    7.611      3 Template:Variable
- 10.97%    7.301      2 Template:Navigation_menu_2
-  8.95%    5.959      1 Template:Value
-  7.39%    4.920     96 Template:MenuCommand
-  3.96%    2.634      1 Template:Incode
-  3.60%    2.397      2 Template:Docnav
+100.00%   37.316      1 -total
+ 14.70%    5.485      1 Template:Sketcher_Tools_navi/cs
+ 11.48%    4.285      2 Template:Navigation_menu_2
+ 10.53%    3.928      1 Template:Userdocnavi/cs
+ 10.14%    3.783     96 Template:MenuCommand
+  8.89%    3.318      3 Template:PropertyView
+  6.96%    2.597      1 Template:Value
+  5.03%    1.877      2 Template:Docnav
+  4.93%    1.839      3 Template:Variable
+  4.77%    1.781      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170342 and revision id 1742508. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170401 and revision id 1742510. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
