--- a/wiki/it/Macro_Code_Colors_Resistance.html
+++ b/wiki/it/Macro_Code_Colors_Resistance.html
@@ -14,7 +14,7 @@ Macro Code Colors Resistance
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Create the resistance, give the value or the color code, you can also calculate the total value with a serial or parallel resistance<br><br>Versione macro: 0.1<br>Ultima modifica: 2025/12/12<br>Versione FreeCAD: 1.00 and above<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Toolbar Icon</a><br>Autore: Mario52<br>
+<td class="ctEven left macro-description">Creare una resistenza, fornire il valore o il codice colore, ed &egrave; anche possibile calcolare il valore totale con una resistenza in serie o in parallelo<br><br>Versione macro: 0.1<br>Ultima modifica: 2025/12/12<br>Versione FreeCAD: 1.00 e successive<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Icona barra degli strumenti</a><br>Autore: Mario52<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -26,7 +26,7 @@ Macro Code Colors Resistance
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Toolbar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/2/20/Code_Colors_Resistance.png">Icona barra degli strumenti</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
@@ -50,7 +50,7 @@ Macro Code Colors Resistance
 <th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
-<td class="ctEven FreeCAD-version">1.00 and above
+<td class="ctEven FreeCAD-version">1.00 e successive
 </td></tr>
 <tr>
 <th class="ctOdd">Scorciatoia
@@ -125,15 +125,15 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/cfce0b58e62b036e910
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122170334
+Cached time: 20260122170515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.028 seconds
-Real time usage: 0.053 seconds
+Real time usage: 0.040 seconds
 Preprocessor visited node count: 107/1000000
-Post&#8208;expand include size: 3495/2097152 bytes
-Template argument size: 1208/2097152 bytes
+Post&#8208;expand include size: 3569/2097152 bytes
+Template argument size: 1282/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -141,13 +141,13 @@ Unstrip post&#8208;expand size: 2344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.081      1 -total
- 45.12%    3.195      1 Template:Macro/it
- 27.58%    1.953      1 Template:Caption
- 24.82%    1.758      1 Template:Codeextralink
+100.00%    6.737      1 -total
+ 33.25%    2.240      1 Template:Codeextralink
+ 32.83%    2.212      1 Template:Macro/it
+ 31.05%    2.092      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170334 and revision id 1742506. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412266-0!canonical and timestamp 20260122170515 and revision id 1742512. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
